Cropped image style fixed & Requested changes made

--- a/frontend/src/app/modules/shared/crop-image/crop-image.component.sass
+++ b/frontend/src/app/modules/shared/crop-image/crop-image.component.sass
@@ -29,24 +29,15 @@
     font-family: Rubik
     background: $drk-gray !important
     border-radius: 0px 0px 10px 10px
-    .image-upload-cont
-      position: relative
-      height: 215px
-      width: 215px
-      margin-left: 30px
-      margin-top: 16px
-      box-shadow: 0px 2px 12px 2px #00000050
-      border-radius: 50%
-      .hover-content
-        position: relative
-        display: grid
-        justify-content: center
-        align-content: center
-        background: none
-        color: #A3A6B1
-        width: 100%
-        height: 100%
-        border-radius: 50%
+    #image
+        display: block
+        height: 215px
+        width: 215px
+        object-fit: cover
+        border-radius: 50% 
+        border: none
+        background: $drk-rain
+        text-indent: 100rem
     .buttons-row
       display: flex
       justify-content: center
